# ioailab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  book.toml  pyproject.toml
docker/: Dockerfile  compose.yaml  shell_gui.sh
docs/: SUMMARY.md  agents.md  architecture.md  data.md  development.md  examples.md  galbot_sensors.md  index.md  reference.md  tasks.md  tutorial.md  yolo_seg.md
examples/: 01_collect.py  02_mimic.py  03_train.py  04_eval.py  05_custom_agent.py  06_collect_component_task.py  07_compound_task.py
scripts/: build_versioned_docs.sh
tests/: smoke_g1_planner.py  test_actions.py  test_agents_api.py  test_architecture_simplification_contracts.py  test_assets_and_imports.py  test_base_nav_agent.py  test_dataset_refs.py  test_docs_and_examples.py  test_env_masks.py  test_envs_api.py  test_g1_motion_plan_action_source.py  test_g1_refactor_contracts.py  test_imitation_scripts.py  test_long_horizon_full_task.py  test_make_env_options.py  test_mdp.py  test_mdp_boundary_no_success_predicates.py  test_motion_plan_lerobot_dataset.py  test_pick_to_shelf_flow.py  test_pick_to_shelf_long_horizon_smoke.py  test_pick_to_shelf_phase_tasks.py  test_pick_to_shelf_task_flow_registry.py  test_pipeline_examples.py  test_planner_api.py  test_policy_training_api.py  test_scenario.py  test_sequence_agent.py  test_sort_to_shelf_task_flow_registry.py  test_sort_to_shelf_terminations.py  test_stack_cube_mimic.py  test_task_authoring_helpers.py  test_task_registry.py  test_tasks_mdp_layer_is_robot_agnostic.py  (+2 more)
(+245 files in other folders)
